<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_blue"
    tools:context=".LoginForm">


    <!--    titulo da tela-->
    <TextView
        android:id="@+id/entre_no_seu_jardim"
        style="@style/center_title_pattern"
        android:layout_marginTop="20dp"
        android:text="@string/title_form_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    logo principal-->
    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/login_animacao"
        app:layout_constraintBottom_toTopOf="@id/linear_layout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entre_no_seu_jardim"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content" />

    <!--    form de login-->
<!--    <View-->
<!--        android:id="@+id/view_form"-->
<!--        style="@style/ContainerComponents"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/logo" />-->

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/container_components"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <!--    titulo do form de login-->
        <TextView
            android:id="@+id/faca_seu_login"
            style="@style/center_title_pattern"
            android:text="@string/title2_form_login"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <!--    container_icons-->
        <LinearLayout
            android:id="@+id/login_icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:src="@drawable/google" />

            <ImageView
                android:id="@+id/linkedin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/linkedin" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_login_icons"
            style="@style/center_title2_pattern"
            android:layout_marginTop="20dp"
            android:text="@string/phrase_login_icons"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_icons" />

        <!--    container_inputs-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/text_login_icons">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/edit_email"
                    style="@style/edit_text_form_login"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:hint="E-mail"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/dark_purple"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/dark_purple">

                <EditText
                    android:id="@+id/edit_password"
                    style="@style/edit_text_form_login"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:hint="Senha"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/dark_purple"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_esqueceu_a_senha"
                style="@style/title2_pattern"
                android:onClick="esqueceuSenha"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/montserrat_mediumitalic"
                android:text="@string/forgot_password"
                android:layout_gravity="right"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/btn_form_login"
                android:layout_marginTop="10dp"
                android:text="@string/btn_login" />

            <TextView
                android:id="@+id/text_cadastro"
                style="@style/title2_pattern"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_mediumitalic"
                android:text="@string/text_cadastro"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>