<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_blue"
    tools:context=".ForgotPasswordForm">

    <ImageView
        android:id="@+id/close_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_baseline_close_24" />

    <!--    titulo da tela-->
    <TextView
        android:id="@+id/tudo_comeca_aqui"
        style="@style/center_title_pattern"
        android:layout_marginTop="10dp"
        android:text="@string/title_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close_icon" />

    <!--    logo principal-->
    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/forgot"
        app:layout_constraintBottom_toTopOf="@id/linear_layout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tudo_comeca_aqui"
        android:layout_height="0dp"
        android:layout_width="wrap_content" />

    <!--    form de recuperação-->
    <!--    <View-->
    <!--        android:id="@+id/view_form"-->
    <!--        style="@style/ContainerComponents"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/logo" />-->

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/container_components"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <!--    titulo do form de login-->
        <TextView
            android:id="@+id/faca_seu_cadastro"
            style="@style/center_title_pattern"
            android:text="@string/text_vamos_la"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <!--    container_icons-->

        <!--    container_inputs-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/text_login_icons">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/edit_email_para_recuperacao"
                    style="@style/edit_text_form_login"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:hint="E-mail"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/dark_purple"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_recuperacao"
                style="@style/btn_form_login"
                android:layout_marginTop="20dp"
                android:text="@string/btn_recuperar" />

            <TextView
                android:id="@+id/text_cadastrar"
                style="@style/title2_pattern"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_mediumitalic"
                android:text="@string/text_cadastro"
                android:layout_gravity="center" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>